                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0


  *) [TS-2160] Remove ats_is_ip_nonroutable and replace it with the less confusing
   ats_is_ip_linklocal and ats_is_ip_private.

  *) [TS-2154] Lua plugin asserts traffic_server on startup

  *) [TS-2158] Properly mark an IP as non-routable for IPv4 and IPv6 link local
   addresses as well as IPv6 private addresses and IPv4 Carrier Grade NAT
   addresses from RFC 6598.

  *) [TS-2155] Make a new RAT exclude file that uses the regular expressions
   now supported. Also cleanup some of minor licensing discrepancies.

  *) [TS-2148] handle_cache_operation_on_forward_server_response ignores value
    of api_server_response_no_store.
    Author: Corey Cossentino <corey@cossentino.com> 

  *) [TS-2147] Set server_share_sessions to 1 for 'internal' transactions in
   rfc5861 plugin.

  *) [TS-2107] split proxy.config.http.transaction_active_timeout_in to
     proxy.config.http.transaction_header_timeout_in and
     proxy.config.http.transaction_request_timeout_in. 

  *) [TS-2114] buffer_upload plugin defines true and false
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2116] buffer_upload plugin is in the source tree but does not build
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2094] eliminate xcrun warnings at configure time

  *) [TS-2141] Inconsistent euid cause bad mgmtapi/eventapi sockets.

  *) [TS-2137] Use eventfd instread of pthread signal/wait in ATS.

  *) [TS-287] Fix transaction_active_timeout_in does not trigger on the first
   request of a Keep-Alive connection. Author: Li Gang <quehan@taobao.com>.

  *) [TS-2136] Fix the first proxy.config.http.accept_no_activity_timeout is
   invalid.

  *) [TS-2089] Introduce configurable collation preproc threads.

  *) [TS-2126] Avoid unnecessary memory copy in LogHost::write()

  *)[ TS-2096] Improve SSL certificate loading error messages.
