@@ -2,6 +2,8 @@
 Changes with Apache Traffic Server 4.1.0
 
 
+  *) [TS-2156] Fix stats trap in different type of threads
+
   *) [TS-2160] Remove ats_is_ip_nonroutable and replace it with the less confusing
    ats_is_ip_linklocal and ats_is_ip_private.
 
